--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
         <!-- Navbar -->
         <div class="container-fluid pt-3 pb-2" id="meny-top">
+
+            <div class="col-auto d-flex justify-content-end">
+                <button class="btn">
+                    <i class="bi bi-bag"></i>
+                </button>
+            </div>
             <div id="top-row" class="row justify-content-end">
                 <div class="col-3">
                     <nav class="navbar navbar-expand-sm navbar">
