lade till divar för varukorg + skuggning

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 
 <body>
 
+    <div id="shoppingCart" class="shopping-cart">
+        <!-- Varukorgsinnehåll  -->
+        </div>
+    
+        
+        <div id="pageOverlay" class="overlay">
+        </div>
 
     <header class="sticky-top">
 
