lade till divar för sc och ol, samt css för dessa

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     
         
         <div id="pageOverlay" class="overlay">
+             <!-- För skuggning av resten av sidan  -->
         </div>
 
     <header class="sticky-top">
