lade till eventlistener

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container-fluid pt-3 pb-2" id="meny-top">
 
             <div class="col-auto d-flex justify-content-end">
-                <button class="btn">
+                <button  id="shoppingCartIcon" class="btn">
                     <i class="bi bi-bag"></i>
                 </button>
             </div>
