--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
 </head>
 
+
+<!-- Härnäst:
+    1. Istället för att komma till beställningsida när man klickar på en beställ-knapp skall varan läggas
+        till i varukorgen, m.a.o. nästan som orderpage
+    2. En siffra ska dyka upp i varukorgsikonen som visat hur många varor som finns där i -->
+
+
 <body>
 
     <div id="shoppingCart" class="shopping-cart">
