lade till nytt attribut i beställknapparna

--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
 
 <!-- Härnäst:
     1. Istället för att komma till beställningsida när man klickar på en beställ-knapp skall varan läggas
-        till i varukorgen, m.a.o. nästan som orderpage
-    2. En siffra ska dyka upp i varukorgsikonen som visat hur många varor som finns där i -->
+        till i varukorgen, m.a.o. nästan som orderpage. När vi trycker beställ laddas varukorgen med den aktuella varan
+    2. En siffra ska dyka upp i varukorgsikonen som visat hur många varor som finns där i 
+    3. Lägg till ett x i shopping cart-->
 
 
 <body>
 
     <div id="shoppingCart" class="shopping-cart">
-        <!-- Varukorgsinnehåll  -->
+        <div id="cartContent">
+            <!--anropa en loadCartContent()-funktion -->
+        </div>
         </div>
     
         
